--- a/teste.html
+++ b/teste.html
@@ -30,7 +30,7 @@
                 </body>
                 <H2>SITES PROIBIDOS</H2>
                 <strong>1:</strong>
-                <p><a href="http://youtube.com/BoraParaPratica">deus.com</a></p> <br>
+                <p><a href="http://youtube.com/BoraParaPratica">DEUS.com</a></p> <br>
                 <strong>2:</strong>
                 <p><a href="http://youtube.com/ProfessorRamos">cocacola.com</a></p> <br>
                 <strong>3:</strong>
